--- a/9nov2019/Math_expression.html
+++ b/9nov2019/Math_expression.html
@@ -38,11 +38,21 @@
 // alert(num)
 
 //pre increment 
-var num = 5
-alert(--num)
-alert(num)
+// var num = 5
+// alert(--num)
+// alert(num)
 
+// var num = 3
+// num *= 3;
+// alert(num)
 
+// var num = 3
+// var a = num++ + --num + num + num-- +  ++num; //3+3+3+3+3
+// alert(a)
+
+var num =3
+var b = num++ + ++num;
+alert(b);
 
 </script>
 </body>
